2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	* lib/widgets/ephy-node-view.c:

	Workaround/semi-fix for bug #351814. The real cause of the problem is
	the user_data that is never set on a GtkTreeIter, so the Ephy
	implementation of the tree makes it to have a stamp of 0 being that
	way an invalid iter. Patch by Diego Escalante Urrelo.

2006-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp:

	Revert part of the last change, we don't need the top window here.

2006-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp:

	Use the top DOM window here, and adapt to gecko 1.8.1.

2006-08-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add some more mime types. Fixes bug #352482.

2006-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Use escaped URL for about:recover. Fixes bug #351296.

2006-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* plugins/desktop-file/plugin.cpp:

	Fix crash on PPC due to differing pointer types.

2006-07-31  Christian Persch  <hristian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-07-31  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.14.3 ===

	* NEWS:
	* configure.ac:

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (match_selected_cb):
	* src/ephy-location-action.c: (action_activated_cb):

	Reset IM context before activation. Bug #348478, patch by
	Nguyễn Thái Ngọc Duy.

2006-07-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	No need to double-init gnome-vfs.

2006-07-23  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyFind.cpp:

	Fix the build.

2006-07-20  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (entry_key_press_cb),
	(entry_activate_after_cb), (action_activated_after_cb),